# wgpu-render-node

./: Cargo.toml  README.md
examples/basic/: main.rs  shader.fs  shader.vs  utils.rs
smol_renderer_derive/: Cargo.toml
smol_renderer_derive/src/: lib.rs
src/: frame_buffer.rs  graph.rs  lib.rs  render_node.rs  shader.rs  texture.rs  uniforms.rs  vertex_buffer.rs
src/textures/: mod.rs  simpletexture.rs
