[package]
name = "smol-renderer"
version = "0.1.0"
authors = ["Nehliin <oskar.d.nehlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5.0"
smallvec = "1.4.0"
thiserror = "1.0" 
glsl-to-spirv = "0.1"
image = "0.19"

[dev-dependencies]
futures = "0.3"