[package]
name = "smol-renderer"
version = "0.1.0"
authors = ["Nehliin <oskar.d.nehlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = {git = "https://github.com/gfx-rs/wgpu-rs", features = ["trace"]}
smallvec = "1.4.0"
thiserror = "1.0" 
shaderc = {version = "0.6"}
image = "0.19"
smol_renderer_derive = { path = "smol_renderer_derive"}
once_cell = "1.4"

[dev-dependencies]
futures = "0.3"
winit = "0.22"
nalgebra = "0.21"