[package]
name = "smol_renderer_derive"
version = "0.1.0"
authors = ["Nehliin <oskar.d.nehlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro-error = "1.0.2"